@@ -1,3 +1,12 @@
+Thu Nov 13 18:47:36 2003  Dale Wilson  <wilson_d@ociweb.com>
+
+        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp:
+          Don't confuse VC6 with an unexpected cast.
+
+        * orbsvcs/Fault_Notifier/Fault_Notifier_Main.cpp:
+        * orbsvcs/tests/FT_App/FT_TestReplica_i.cpp:
+          More explicit template instantiation issues.
+
 Thu Nov 13 09:07:45 2003  Dale Wilson  <wilson_d@ociweb.com>
 
         * orbsvcs/tests/FT_App/FT_Client.cpp:
